--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_map: ^0.10.1+1
+  # flutter_map: ^0.10.1+1
+  flutter_map:
+    git:
+      url: https://github.com/TobnacTobi/flutter_map
   latlong: ^0.6.1
   flutter_map_marker_popup: ^0.1.4
 
